exports[`reducers > analysis should handle clear isochrone results 1`] = `
Object {
  "isFetchingIsochrone": false,
  "isochrone": null,
  "isochroneCutoff": 60,
  "isochroneLatLng": null,
}
`;

exports[`reducers > analysis should handle default state 1`] = `
Object {
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
}
`;

exports[`reducers > analysis should handle set isochrone cutoff 1`] = `
Object {
  "isFetchingIsochrone": false,
  "isochroneCutoff": 123,
}
`;

exports[`reducers > analysis should handle set isochrone fetch status 1`] = `
Object {
  "isFetchingIsochrone": true,
  "isochroneCutoff": 60,
}
`;

exports[`reducers > analysis should handle set isochrone latlng 1`] = `
Object {
  "isFetchingIsochrone": false,
  "isochroneCutoff": 60,
  "isochroneLatLng": 123,
}
`;

exports[`reducers > analysis should handle set isochrone results 1`] = `
Object {
  "isFetchingIsochrone": false,
  "isochrone": 123,
  "isochroneCutoff": 60,
}
`;
